# plugins-rs

./: Cargo.toml  README.md  build.rs  build_exts.rs  makefile
.cargo/: config.toml
api/: index.js
examples/: base.rs
examples/javascript/embed/: test_7z.7z  test_tar_xz.tar.xz
examples/javascript/embed/add_custom_api/: entry.ts
examples/javascript/plugins/: test_tar.tar
examples/javascript/plugins/demo_plugin/: index.ts
examples/javascript/plugins/demo_plugin/dos/: do_action.ts
examples/javascript/plugins/test/: do.ts  index.ts
internal_macros/: Cargo.toml
internal_macros/src/: lib.rs
plugins-rs-macros/: Cargo.toml  README.md
src/: archives.rs  efs.rs  errors.rs  lib.rs  loader.rs  loader_utils.rs  reader.rs  sources.rs  utils.rs
src/extensions/: mod.rs
src/extensions/core/: index.js  mod.rs
src/extensions/media/: index.js  mod.rs
src/extensions/scrape/: mod.rs
src/modules/: archives.rs  mod.rs  module.rs  source.rs  types.rs  utils.rs
src/utils/: mod.rs
types/core/: index.d.ts
types/media/: index.d.ts
types/scrape/: index.d.ts
