[package]
name = "plugins-rs"
links = "plugins-rs"
version = "0.1.0"
edition = "2024"

[features]
all     = ["media", "scrape", "all_archives"]

default = ["dep:dirs", "dep:which", "dep:nanoid", "dep:uuid", "dep:tiny_http", "dep:reqwest"]

media   = ["dep:ffbins-rs"]
scrape  = ["dep:scraper", "dep:url"]

all_archives = [ "7z", "zip", "tar", "tar_xz", "tar_gz" ]

7z  = ["dep:sevenz-rust2"]
zip  = ["dep:zip"]
tar  = ["dep:tar"]
tar_xz  = ["dep:tar", "dep:xz2"]
tar_gz  = ["dep:tar", "dep:flate2"]



[dev-dependencies]
plugins-rs = { path = ".", features = [ "all" ]}



[build-dependencies]
deno_core = "0.393.0"



[dependencies]
log = "0.4.29"
toml = { version = "1.0.6+spec-1.1.0", features = ["serde"] }
thiserror = "2.0.17"
tokio = { version = "1", features = ["rt"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Utils
dashmap = "6.1.0"
inventory = "0.3.22"
mime_guess2 = "2.3.1"
parking_lot = "0.12.5"

# Core
semver = "1.0.27"
walkdir = "2.5.0"
include_dir = "0.7.4"
# ---
tempfile = "3.27.0"
# ---
zip = { version = "8.2.0", optional = true }
tar = { version = "0.4.43", optional = true }
flate2 = { version = "1.1.9", optional = true }
xz2 = { version = "0.1.7", optional = true }
sevenz-rust2 = { version = "0.20.2", optional = true }

# DENO
deno_ast  =  { version = "=0.53.1", features = ["transpiling"] }
deno_ops  = "0.269.0"
deno_core = "0.393.0"
deno_error = "=0.7.1"

# Scrape Ext
url = { version = "2.5.4", optional = true }
regex = { version = "1.12.2", optional = true }
scraper = { version = "0.26.0", optional = true }

# Media Ext
ffbins-rs = { git = "https://github.com/blockz-code/ffbins-rs", optional = true }

# Core Optional
dirs = { version = "6.0.0", optional = true }
which = { version = "8.0.0", optional = true }
nanoid = { version = "0.4.0", optional = true }
uuid = { version = "1.4.1", optional = true, features = ["v4"] }
tiny_http = { version = "0.12.0", optional = true }
reqwest = { version = "0.13.2", optional = true, features = [ "blocking", "cookies", "query", "form", "json", "multipart", "hickory-dns", "http3", "gzip", "brotli" ] }





[[example]]
name = "base"
path = "examples/base.rs"