[package]
name = "plugins-rs"
links = "plugins-rs"
version = "0.1.2"
edition = "2024"
description = "js plugins for a rust app"
license = "MIT OR Apache-2.0"
repository = "https://github.com/blockz-code/plugins-rs"
readme = "README.md"
keywords = ["js", "ts", "deno", "plugins"]
categories = ["development-tools"]
authors = ["p1mo <101986259+p1mo@users.noreply.github.com>"]

[lints.rust]
unsafe_code     = "forbid"
unused          = "warn"

[features]
all     = ["media", "scrape", "all_archives"]

default = ["dep:dirs", "dep:which", "dep:nanoid", "dep:uuid", "dep:tiny_http", "dep:reqwest"]

media   = ["dep:ffbins-rs"]
scrape  = ["dep:scraper", "dep:url"]

all_archives = [ "7z", "zip", "tar", "tar_xz", "tar_gz" ]

7z  = ["dep:sevenz-rust2"]
zip  = ["dep:zip"]
tar  = ["dep:tar"]
tar_xz  = ["dep:tar", "dep:xz2"]
tar_gz  = ["dep:tar", "dep:flate2"]




[dev-dependencies]
plugins-rs = { path = ".", features = [ "all" ]}



[build-dependencies]
deno_core = "0.394.0"
cfg_aliases = "0.2.1"


[dependencies]
log = "0.4.29"
thiserror = "2.0.17"
# ---
serde_json = "1"
serde = { version = "1", features = ["derive"] }
toml = { version = "1.0.6+spec-1.1.0", features = ["serde"] }



# Core
sha2 = "0.11.0"
semver = "1.0.27"
parking_lot = "0.12.5"
# ---
tempfile = "3.27.0"
# ---
zip = { version = "8.2.0", optional = true }
tar = { version = "0.4.43", optional = true }
flate2 = { version = "1.1.9", optional = true }
xz2 = { version = "0.1.7", optional = true }
sevenz-rust2 = { version = "0.20.2", optional = true }



# RT
tokio = { version = "1", features = ["rt"] }



# DENO
deno_ast  =  { version = "=0.53.1", features = ["transpiling"] }
deno_ops  = "0.270.0"
deno_core = "0.394.0"
deno_error = "=0.7.1"
deno_permissions = { version = "0.100.0" }

deno_os = { version = "0.58.0" }
deno_web = { version = "0.272.0" }
deno_webidl = { version = "0.241.0"}



# Scrape Ext
url = { version = "2.5.4", optional = true }
regex = { version = "1.12.2", optional = true }
scraper = { version = "0.26.0", optional = true }



# Media Ext
ffbins-rs = { version = "0.1.1", optional = true }



# Core Optional
dirs = { version = "6.0.0", optional = true }
which = { version = "8.0.0", optional = true }
nanoid = { version = "0.4.0", optional = true }
uuid = { version = "1.4.1", optional = true, features = ["v4"] }
tiny_http = { version = "0.12.0", optional = true }
reqwest = { version = "0.13.2", optional = true, features = [ "blocking", "cookies", "query", "form", "json", "multipart", "hickory-dns", "http3", "gzip", "brotli" ] }



# Helper Macros
plugins-rs-macros = "0.1.0"


[[example]]
name = "base"
path = "examples/base.rs"